--- a/src/main/resources/forms/main.fxml
+++ b/src/main/resources/forms/main.fxml
@@ -17,7 +17,7 @@
 
 <VBox prefHeight="514.0" prefWidth="843.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.optimization.application.Controller">
     <children>
-        <Pane prefHeight="112.0" prefWidth="843.0" styleClass="pane">
+        <Pane prefHeight="175.0" prefWidth="843.0" styleClass="pane">
          <children>
             <Label layoutX="14.0" layoutY="17.0" text="Function:">
                <font>
@@ -68,6 +68,26 @@
                </font>
             </Label>
             <Label layoutX="560.0" layoutY="60.0" text="with Value:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="100.0" text="Interval:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="leftBoundIntervalField" layoutX="78.0" layoutY="94.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="rightBoundIntervalField" layoutX="162.0" layoutY="94.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Label layoutX="155.0" layoutY="100.0" text=",">
                <font>
                   <Font size="14.0" />
                </font>
