--- a/src/main/resources/forms/main.fxml
+++ b/src/main/resources/forms/main.fxml
@@ -5,6 +5,9 @@
  * Developed by: Nikolay Komarov.
 -->
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -15,6 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.Cursor?>
 <VBox prefHeight="514.0" prefWidth="843.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.optimization.application.Controller">
     <children>
         <Pane prefHeight="175.0" prefWidth="843.0" styleClass="pane">
@@ -93,7 +97,20 @@
                </font>
             </Label>
          </children></Pane>
-        <Pane fx:id="plotArea" prefHeight="272.0" prefWidth="843.0" styleClass="pane" />
+        <Pane prefHeight="272.0" prefWidth="843.0" styleClass="pane">
+         <children>
+            <LineChart fx:id="plotArea" layoutX="14.0" layoutY="13.0" legendVisible="false" prefHeight="211.0" prefWidth="500.0">
+              <xAxis>
+                <NumberAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+               <cursor>
+                  <Cursor fx:constant="CROSSHAIR" />
+               </cursor>
+            </LineChart>
+         </children></Pane>
       <Pane prefHeight="144.0" prefWidth="843.0" styleClass="pane">
          <children>
             <Button fx:id="processButton" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="72.0" styleClass="button" text="Process">
