--- a/src/main/resources/forms/main.fxml
+++ b/src/main/resources/forms/main.fxml
@@ -5,7 +5,7 @@
  * Developed by: Nikolay Komarov.
 -->
 
-<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
@@ -14,143 +14,214 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.Cursor?>
-<VBox prefHeight="514.0" prefWidth="843.0" stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.optimization.application.Controller">
+<?import javafx.geometry.Insets?>
+<VBox stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.optimization.application.Controller">
     <children>
-        <Pane prefHeight="175.0" prefWidth="843.0" styleClass="pane">
+      <HBox maxHeight="52.0" minHeight="52.0">
+          <padding>
+              <Insets left="16" right="16" top="12" />
+          </padding>
          <children>
-            <Label layoutX="14.0" layoutY="17.0" text="Function:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField fx:id="functionField" layoutX="78.0" layoutY="11.0" prefHeight="32.0" prefWidth="751.0" styleClass="text-field">
-               <font>
-                  <Font size="14.0" />
-               </font></TextField>
-            <ComboBox fx:id="methodSelector" layoutX="78.0" layoutY="54.0" prefHeight="32.0" prefWidth="165.0" styleClass="combo" />
-            <RadioButton fx:id="iterationsCountRadio" layoutX="422.0" layoutY="60.0" mnemonicParsing="false" styleClass="radio-button" text="Iterations Count">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <toggleGroup>
-                  <ToggleGroup fx:id="stopByGroup" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton fx:id="precisionRadio" layoutX="313.0" layoutY="60.0" mnemonicParsing="false" selected="true" styleClass="radio-button" text="Precision ε" toggleGroup="$stopByGroup">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </RadioButton>
-            <Label layoutX="254.0" layoutY="60.0" text="Stop by">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="60.0" text="Method:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField fx:id="stopByValueField" layoutX="634.0" layoutY="54.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="rValueField" layoutX="757.0" layoutY="54.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextField>
-            <Label fx:id="rLabel" layoutX="741.0" layoutY="60.0" text="r:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="560.0" layoutY="60.0" text="with Value:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="14.0" layoutY="100.0" text="Interval:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <TextField fx:id="leftBoundIntervalField" layoutX="78.0" layoutY="94.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="rightBoundIntervalField" layoutX="162.0" layoutY="94.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextField>
-            <Label layoutX="155.0" layoutY="100.0" text=",">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-         </children></Pane>
-        <Pane prefHeight="272.0" prefWidth="843.0" styleClass="pane">
-         <children>
-            <LineChart fx:id="plotArea" layoutX="14.0" layoutY="13.0" legendVisible="false" prefHeight="211.0" prefWidth="500.0">
-              <xAxis>
-                <NumberAxis side="BOTTOM" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis side="LEFT" />
-              </yAxis>
-               <cursor>
-                  <Cursor fx:constant="CROSSHAIR" />
-               </cursor>
-            </LineChart>
-         </children></Pane>
-      <Pane prefHeight="144.0" prefWidth="843.0" styleClass="pane">
-         <children>
-            <Button fx:id="processButton" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="72.0" styleClass="button" text="Process">
-            </Button>
-            <Label layoutX="519.0" layoutY="7.0" text="Results">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-            <Label layoutX="520.0" layoutY="42.0" text="Iterations Count:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="519.0" layoutY="62.0" text="Argument Value:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="519.0" layoutY="82.0" text="Function Value:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="iterationsCountValue" layoutX="640.0" layoutY="42.0" text="0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="argumentValue" layoutX="640.0" layoutY="62.0" text="0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label fx:id="functionValue" layoutX="640.0" layoutY="82.0" text="0">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
+            <Pane HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox alignment="CENTER_LEFT" maxHeight="40.0" minHeight="40.0">
+                     <children>
+                        <Label prefHeight="20.0" prefWidth="68.0" text="Function:">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="functionField" minWidth="300.0" prefHeight="32.0" styleClass="text-field" HBox.hgrow="ALWAYS">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </HBox>
+               </children>
+            </Pane>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <Label text="Interval:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                  </Label>
+                  <TextField fx:id="leftBoundIntervalField" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TextField>
+                  <Label text=",">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                  </Label>
+                  <TextField fx:id="rightBoundIntervalField" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </HBox>
          </children>
-      </Pane>
+      </HBox>
+      <HBox maxHeight="40.0" minHeight="40.0">
+          <padding>
+              <Insets left="16" right="16" />
+          </padding>
+         <children>
+             <HBox alignment="CENTER_LEFT" HBox.hgrow="SOMETIMES">
+                 <children>
+                     <Label minWidth="68.0" maxWidth="68.0" text="Method:">
+                         <font>
+                             <Font size="14.0" />
+                         </font>
+                     </Label>
+                     <ComboBox fx:id="methodSelector" layoutX="77.0" layoutY="4.0" prefHeight="32.0" minWidth="166.0" HBox.hgrow="ALWAYS" styleClass="combo" />
+                 </children>
+             </HBox>
+             <HBox alignment="CENTER_LEFT" HBox.hgrow="SOMETIMES">
+                 <padding>
+                     <Insets left="16"/>
+                 </padding>
+               <children>
+                  <Label layoutY="10.0" text="Stop by" minWidth="60">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <RadioButton fx:id="precisionRadio" mnemonicParsing="false" selected="true" styleClass="radio-button" text="Precision ε">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                     <toggleGroup>
+                        <ToggleGroup fx:id="stopByGroup" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="iterationsCountRadio" mnemonicParsing="false" styleClass="radio-button" text="Iterations Count" toggleGroup="$stopByGroup">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                  </RadioButton>
+                  <Label text="with Value:" minWidth="80">
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="stopByValueField" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TextField>
+               </children>
+             </HBox>
+            <Pane prefWidth="103.0">
+               <children>
+                  <Label fx:id="rLabel" layoutX="14.0" layoutY="10.0" text="r:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="rValueField" layoutX="30.0" layoutY="4.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </Pane>
+         </children>
+      </HBox>
+      <LineChart fx:id="plotArea" legendVisible="false">
+        <xAxis>
+          <NumberAxis prefWidth="493.0" side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+         <cursor>
+            <Cursor fx:constant="CROSSHAIR" />
+         </cursor>
+      </LineChart>
+      <HBox maxHeight="52.0" minHeight="52.0" alignment="CENTER_LEFT">
+          <padding>
+              <Insets left="16" right="16" bottom="12" />
+          </padding>
+         <children>
+             <Button fx:id="processButton" mnemonicParsing="false" prefHeight="32.0" minWidth="72.0" maxWidth="72.0" styleClass="button" text="Process" />
+            <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+               <children>
+                  <Label text="Iterations Count:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                  </Label>
+                  <Label fx:id="iterationsCountValue" text="0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="16"/>
+                      </padding>
+                  </Label>
+                  <Label text="Argument Value:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                  </Label>
+                  <Label fx:id="argumentValue" text="0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="16"/>
+                      </padding>
+                  </Label>
+                  <Label text="Function Value:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8"/>
+                      </padding>
+                  </Label>
+                  <Label fx:id="functionValue" text="0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="16"/>
+                      </padding>
+                  </Label>
+               </children>
+            </HBox>
+         </children>
+      </HBox>
     </children>
 </VBox>
