--- a/src/main/resources/forms/main.fxml
+++ b/src/main/resources/forms/main.fxml
@@ -5,6 +5,7 @@
  * Developed by: Nikolay Komarov.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -15,11 +16,9 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.geometry.Insets?>
 <VBox stylesheets="@../css/styles.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.optimization.application.Controller">
     <children>
       <HBox maxHeight="52.0" minHeight="52.0">
@@ -27,35 +26,31 @@
               <Insets left="16" right="16" top="12" />
           </padding>
          <children>
-            <Pane HBox.hgrow="ALWAYS">
+            <HBox alignment="CENTER_LEFT" maxHeight="40.0" minHeight="40.0" HBox.hgrow="ALWAYS">
                <children>
-                  <HBox alignment="CENTER_LEFT" maxHeight="40.0" minHeight="40.0">
-                     <children>
-                        <Label prefHeight="20.0" prefWidth="68.0" text="Function:">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="functionField" minWidth="300.0" prefHeight="32.0" styleClass="text-field" HBox.hgrow="ALWAYS">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </TextField>
-                     </children>
-                  </HBox>
+                  <Label maxWidth="68.0" minWidth="68.0" text="Function:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="functionField" minWidth="120.0" prefHeight="32.0" styleClass="text-field" HBox.hgrow="ALWAYS">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TextField>
                </children>
-            </Pane>
+            </HBox>
             <HBox alignment="CENTER_LEFT">
                <children>
-                  <Label text="Interval:">
+                  <Label maxWidth="70.0" minWidth="70.0" text="Interval:">
                      <font>
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="12" right="8" />
                       </padding>
                   </Label>
-                  <TextField fx:id="leftBoundIntervalField" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                  <TextField fx:id="leftBoundIntervalField" minWidth="42.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -65,10 +60,10 @@
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="8" right="8" />
                       </padding>
                   </Label>
-                  <TextField fx:id="rightBoundIntervalField" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                  <TextField fx:id="rightBoundIntervalField" minWidth="42.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -82,74 +77,77 @@
               <Insets left="16" right="16" />
           </padding>
          <children>
-             <HBox alignment="CENTER_LEFT" HBox.hgrow="SOMETIMES">
+             <HBox alignment="CENTER_LEFT" >
                  <children>
-                     <Label minWidth="68.0" maxWidth="68.0" text="Method:">
+                     <Label maxWidth="68.0" minWidth="68.0" text="Method:">
                          <font>
                              <Font size="14.0" />
                          </font>
                      </Label>
-                     <ComboBox fx:id="methodSelector" layoutX="77.0" layoutY="4.0" prefHeight="32.0" minWidth="166.0" HBox.hgrow="ALWAYS" styleClass="combo" />
+                     <ComboBox fx:id="methodSelector" minWidth="166.0" prefHeight="32.0" styleClass="combo" />
                  </children>
              </HBox>
-             <HBox alignment="CENTER_LEFT" HBox.hgrow="SOMETIMES">
-                 <padding>
-                     <Insets left="16"/>
-                 </padding>
+            <HBox fx:id="rValuePane" alignment="CENTER_LEFT">
                <children>
-                  <Label layoutY="10.0" text="Stop by" minWidth="60">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <RadioButton fx:id="precisionRadio" mnemonicParsing="false" selected="true" styleClass="radio-button" text="Precision ε">
+                  <Label text="r:">
                      <font>
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="12" right="8" />
+                      </padding>
+                  </Label>
+                  <TextField fx:id="rValueField" minWidth="42.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </HBox>
+             <HBox alignment="CENTER_LEFT" HBox.hgrow="SOMETIMES">
+                 <padding>
+                     <Insets left="16" />
+                 </padding>
+               <children>
+                  <Label minWidth="60" text="Stop by">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <RadioButton fx:id="precisionRadio" minWidth="80.0" mnemonicParsing="false" selected="true" styleClass="radio-button" text="Precision ε">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                      <padding>
+                          <Insets left="8" right="8" />
                       </padding>
                      <toggleGroup>
                         <ToggleGroup fx:id="stopByGroup" />
                      </toggleGroup>
                   </RadioButton>
-                  <RadioButton fx:id="iterationsCountRadio" mnemonicParsing="false" styleClass="radio-button" text="Iterations Count" toggleGroup="$stopByGroup">
+                  <RadioButton fx:id="iterationsCountRadio" minWidth="80.0" mnemonicParsing="false" styleClass="radio-button" text="Iterations Count" toggleGroup="$stopByGroup">
                      <font>
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="8" right="8" />
                       </padding>
                   </RadioButton>
-                  <Label text="with Value:" minWidth="80">
+                  <Label minWidth="80" text="with Value:">
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="8" right="8" />
                       </padding>
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="stopByValueField" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
+                  <TextField fx:id="stopByValueField" minWidth="42.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </TextField>
                </children>
              </HBox>
-            <Pane prefWidth="103.0">
-               <children>
-                  <Label fx:id="rLabel" layoutX="14.0" layoutY="10.0" text="r:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="rValueField" layoutX="30.0" layoutY="4.0" prefHeight="32.0" prefWidth="72.0" styleClass="text-field">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </TextField>
-               </children>
-            </Pane>
          </children>
       </HBox>
       <LineChart fx:id="plotArea" legendVisible="false">
@@ -163,12 +161,12 @@
             <Cursor fx:constant="CROSSHAIR" />
          </cursor>
       </LineChart>
-      <HBox maxHeight="52.0" minHeight="52.0" alignment="CENTER_LEFT">
+      <HBox alignment="CENTER_LEFT" maxHeight="52.0" minHeight="52.0">
           <padding>
-              <Insets left="16" right="16" bottom="12" />
+              <Insets bottom="12" left="16" right="16" />
           </padding>
          <children>
-             <Button fx:id="processButton" mnemonicParsing="false" prefHeight="32.0" minWidth="72.0" maxWidth="72.0" styleClass="button" text="Process" />
+             <Button fx:id="processButton" maxWidth="72.0" minWidth="72.0" mnemonicParsing="false" prefHeight="32.0" styleClass="button" text="Process" />
             <HBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
                <children>
                   <Label text="Iterations Count:">
@@ -176,7 +174,7 @@
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="8" right="8" />
                       </padding>
                   </Label>
                   <Label fx:id="iterationsCountValue" text="0">
@@ -184,7 +182,7 @@
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="16"/>
+                          <Insets left="8" right="16" />
                       </padding>
                   </Label>
                   <Label text="Argument Value:">
@@ -192,7 +190,7 @@
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="8" right="8" />
                       </padding>
                   </Label>
                   <Label fx:id="argumentValue" text="0">
@@ -200,7 +198,7 @@
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="16"/>
+                          <Insets left="8" right="16" />
                       </padding>
                   </Label>
                   <Label text="Function Value:">
@@ -208,7 +206,7 @@
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="8"/>
+                          <Insets left="8" right="8" />
                       </padding>
                   </Label>
                   <Label fx:id="functionValue" text="0">
@@ -216,7 +214,7 @@
                         <Font size="14.0" />
                      </font>
                       <padding>
-                          <Insets left="8" right="16"/>
+                          <Insets left="8" right="16" />
                       </padding>
                   </Label>
                </children>
