--- a/src/main/resources/forms/main.fxml
+++ b/src/main/resources/forms/main.fxml
@@ -6,8 +6,6 @@
 -->
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -21,7 +19,7 @@
 
 <?import com.optimization.application.ExtendedLineChart?>
 
-<VBox stylesheets="@../css/styles.css" xmlns:sd="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.optimization.application.Controller">
+<VBox stylesheets="@../css/styles.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.optimization.application.Controller">
     <children>
       <HBox maxHeight="52.0" minHeight="52.0">
           <padding>
